--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorPrimary">#FFF</item>
+        <item name="android:itemTextAppearance">@style/MenuTextAppearance</item>
     </style>
 
+    <style name="MenuTextAppearance" parent="TextAppearance.AppCompat.Menu">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+    </style>
 </resources>
